Adds more fields to manifest.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 authors = ["Nathan Ringo <remexre@gmail.com>"]
+description = "A simple tool to convert CBOR to JSON (and back)."
+homepage = "https://github.com/remexre/cbor2json"
 license = "MIT"
 name = "cbor2json"
+repository = "https://github.com/remexre/cbor2json"
 version = "0.1.0"
 
 [dependencies]
